[tool.poetry]
name = "telegram-battery-bot"
version = "0.1.0"
description = "Telegram bot that notifies when battery is low"
authors = ["Tomasz Walotek <tomasz.walotek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
